2021-12-07  Cameron McCormack  <heycam@apple.com>

        Puzzle feature detection followup
        https://bugs.webkit.org/show_bug.cgi?id=233946

        Unreviewed.

        * blog-files/wide-gamut-canvas/puzzle.html:

2021-12-07  Cameron McCormack  <heycam@apple.com>

        Tweak puzzle to use feature detection
        https://bugs.webkit.org/show_bug.cgi?id=233946

        Unreviewed.

        * blog-files/wide-gamut-canvas/puzzle.html:

2021-11-30  Cameron McCormack  <heycam@apple.com>

        Add resources for an upcoming blog post
        https://bugs.webkit.org/show_bug.cgi?id=233681

        Unreviewed.

        * blog-files/wide-gamut-canvas/pinwheels.html: Added.
        * blog-files/wide-gamut-canvas/puzzle.html: Added.
        * blog-files/wide-gamut-canvas/puzzle.jpg: Added.
        * blog-files/wide-gamut-canvas/squares.html: Added.
        * blog-files/wide-gamut-canvas/stripes.html: Added.

2021-11-10  Kimmo Kinnunen  <kkinnunen@apple.com>

        Coding style for inner namespaces is should be simplified to not indented
        https://bugs.webkit.org/show_bug.cgi?id=232073

        Reviewed by Antti Koivisto.

        * code-style.md:
        Simplify coding style to match the existing code: contents of inner namespaces
        should not be indented.

2021-11-04  Ryan Haddad  <ryanhaddad@apple.com>

        Add Monterey to WebKit Build Archives page
        https://bugs.webkit.org/show_bug.cgi?id=232739

        Reviewed by Alexey Proskuryakov.

        * wp-content/themes/webkit/build-archives.php:

2021-09-02  Jonathan Bedard  <jbedard@apple.com>

        [contributors.json] Relocation (Part 3)
        https://bugs.webkit.org/show_bug.cgi?id=229690
        <rdar://problem/82552403>

        Reviewed by Aakash Jain.

        * commit-review.md: Link to metadata/contributors.json.
        * wp-content/themes/webkit/team.php: Load from metadata/contributors.json,
        load list instead of dictionary.
